# dl

./: .gitignore  pyproject.toml
dl/utils/: __init__.py  datasets.py  vision.py
examples/architectures/: lenet.py
examples/datasets/: mnist.py
